--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parallelshell 'npm run sync'",
+    "sync": "browser-sync start --server --files ./*html ./assets/"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/stewartknapman/stewartknapman-2021/issues"
   },
-  "homepage": "https://github.com/stewartknapman/stewartknapman-2021#readme"
+  "homepage": "https://github.com/stewartknapman/stewartknapman-2021#readme",
+  "devDependencies": {
+    "browser-sync": "^2.27.5",
+    "parallelshell": "^3.0.2",
+    "watch": "^0.13.0"
+  }
 }
